--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./assets/Logo/SVG/Daykeeper-Mark-Blue.svg"
+      href="/Logo/SVG/Daykeeper-Mark-Blue.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DayKeeper</title>
