--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/Logo/SVG/Daykeeper-Mark-Blue.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DayKeeper</title>
+    <title>Daykeeper</title>
   </head>
   <body>
     <div id="root"></div>
